# spec-pilot-mobile

./: .gitignore  01-mobile-principles.md  02-project-structure.md  03-domain-patterns.md  04-data-patterns.md  05-infrastructure-patterns.md  06-presentation-patterns.md  07-crosscutting-patterns.md  08-testing-strategy.md  09-quality-gates.md  10-security.md  11-verification-checklist.md  12-ci-cd-distribution.md  13-mobile-observability.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
mcp-server/src/snapshots/: spec_pilot_mobile_mcp__tests__scaffold_phase1.snap  spec_pilot_mobile_mcp__tests__sdd_next_step_no_constitution.snap  spec_pilot_mobile_mcp__tests__spec_analyze_gate_blocked.snap  spec_pilot_mobile_mcp__tests__spec_analyze_ok.snap  spec_pilot_mobile_mcp__tests__spec_clarify_no_markers.snap  spec_pilot_mobile_mcp__tests__spec_clarify_with_markers.snap  spec_pilot_mobile_mcp__tests__spec_constitution.snap  spec_pilot_mobile_mcp__tests__spec_feature.snap
