[package]
name = "spec-pilot-mobile-mcp"
version = "1.0.0"
edition = "2024"
description = "MCP server — Spec-Pilot Mobile tools for AI agents"

[[bin]]
name = "spec-pilot-mobile-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.3", features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
insta = "1"
